--- a/covid19app/package.json
+++ b/covid19app/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "covid19app",
+  "name": "react-website-responsive",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.6.0",
+    "@testing-library/user-event": "^12.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
