--- a/covid19app/package.json
+++ b/covid19app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.5.0",
     "bootstrap": "^4.5.3",
     "react": "^17.0.1",
+    "react-chatbot-kit": "^1.1.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
